--- a/bot/web/static/index.html
+++ b/bot/web/static/index.html
@@ -3,40 +3,318 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Starry Ticket Dashboard</title>
+  <title>Starry Dashboard</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
+  <div class="bg-orb orb-a"></div>
+  <div class="bg-orb orb-b"></div>
   <div class="wrap">
     <header class="top">
-      <div class="brand">Starry Ticket Dashboard</div>
-      <div class="tokenBox">
-        <input id="token" type="password" placeholder="Dashboard Token (Bearer)">
-        <button id="saveToken">Speichern</button>
+      <div class="brand">
+        <div class="logo">★</div>
+        <div>
+          <div class="title">Starry Dashboard</div>
+          <div class="subtitle">Ticket-System, Settings und Logs im Blick.</div>
+        </div>
+      </div>
+      <div class="status">
+        <span id="statusDot" class="dot"></span>
+        <span id="statusText">Nicht verbunden</span>
       </div>
     </header>
 
-    <div class="grid">
-      <section class="card">
-        <h2>Settings (Overrides)</h2>
+    <section class="auth card">
+      <div class="auth-left">
+        <h2>Dashboard Zugang</h2>
+        <p class="muted">Token kommt aus <code>bot.dashboard.token</code> in der config.</p>
+      </div>
+      <div class="auth-right">
+        <input id="token" type="password" placeholder="Bearer Token eingeben">
+        <button id="saveToken" class="primary">Speichern</button>
+        <button id="testToken">Testen</button>
+      </div>
+    </section>
+
+    <nav class="nav">
+      <button class="nav-btn active" data-tab="overview">Übersicht</button>
+      <button class="nav-btn" data-tab="tickets">Tickets</button>
+      <button class="nav-btn" data-tab="messaging">Nachrichten</button>
+      <button class="nav-btn" data-tab="moderation">Moderation</button>
+      <button class="nav-btn" data-tab="roles">Rollen</button>
+      <button class="nav-btn" data-tab="users">User</button>
+      <button class="nav-btn" data-tab="logs">Logs</button>
+      <button class="nav-btn" data-tab="applications">Bewerbungen</button>
+      <button class="nav-btn" data-tab="settings">Settings</button>
+    </nav>
+
+    <section id="tab-overview" class="panel active">
+      <div class="grid">
+        <div class="card">
+          <div class="card-head">
+            <h2>Übersicht</h2>
+            <div class="pill" id="lastSync">letzter Sync: –</div>
+          </div>
+          <div class="metrics">
+            <div class="metric">
+              <div class="label">Offen</div>
+              <div class="value" id="mOpen">–</div>
+            </div>
+            <div class="metric">
+              <div class="label">Geclaimed</div>
+              <div class="value" id="mClaimed">–</div>
+            </div>
+            <div class="metric">
+              <div class="label">Geschlossen</div>
+              <div class="value" id="mClosed">–</div>
+            </div>
+            <div class="metric">
+              <div class="label">Gesamt</div>
+              <div class="value" id="mTotal">–</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-head">
+            <h2>Snippets</h2>
+            <button id="snippetsReload">Aktualisieren</button>
+          </div>
+          <div id="snippets" class="snippets"></div>
+        </div>
+      </div>
+    </section>
+
+    <section id="tab-tickets" class="panel">
+      <div class="grid">
+        <div class="card">
+          <div class="card-head">
+            <h2>Tickets</h2>
+            <div class="tools">
+              <input id="ticketSearch" type="text" placeholder="Suche ID, User, Thread…">
+              <select id="ticketFilter">
+                <option value="all">Alle</option>
+                <option value="open">Offen</option>
+                <option value="claimed">Geclaimed</option>
+                <option value="closed">Geschlossen</option>
+              </select>
+              <button id="ticketsReload">Aktualisieren</button>
+            </div>
+          </div>
+          <div id="tickets" class="tickets"></div>
+        </div>
+
+        <div class="card">
+          <div class="card-head">
+            <h2>Ticket Aktionen</h2>
+          </div>
+          <div class="form-grid">
+            <input id="ticketThreadId" type="text" placeholder="Thread ID">
+            <input id="ticketActorId" type="text" placeholder="Staff User ID">
+            <input id="ticketUserId" type="text" placeholder="User ID (optional)">
+            <select id="ticketAction">
+              <option value="claim">Claim</option>
+              <option value="release">Release</option>
+              <option value="close">Close</option>
+              <option value="add_user">User hinzufügen</option>
+            </select>
+            <input id="ticketReason" type="text" placeholder="Grund (optional)">
+            <button id="ticketActionBtn" class="primary">Ausführen</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="tab-messaging" class="panel">
+      <div class="grid">
+        <div class="card">
+          <div class="card-head">
+            <h2>Nachricht senden</h2>
+          </div>
+          <div class="form-grid">
+            <input id="msgChannelId" type="text" placeholder="Channel ID">
+            <textarea id="msgContent" placeholder="Nachricht"></textarea>
+            <button id="sendMessage" class="primary">Senden</button>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-head">
+            <h2>Embed senden</h2>
+          </div>
+          <div class="form-grid">
+            <input id="embedChannelId" type="text" placeholder="Channel ID">
+            <input id="embedTitle" type="text" placeholder="Titel">
+            <textarea id="embedDesc" placeholder="Beschreibung"></textarea>
+            <textarea id="embedFields" placeholder="Fields (pro Zeile: name|value|inline)"></textarea>
+            <input id="embedThumbnail" type="text" placeholder="Thumbnail URL (optional)">
+            <input id="embedImage" type="text" placeholder="Image URL (optional)">
+            <input id="embedFooter" type="text" placeholder="Footer (optional)">
+            <input id="embedColor" type="text" placeholder="Farbe (hex, optional)">
+            <button id="sendEmbed" class="primary">Senden</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="tab-moderation" class="panel">
+      <div class="grid">
+        <div class="card">
+          <div class="card-head">
+            <h2>Timeout</h2>
+          </div>
+          <div class="form-grid">
+            <input id="timeoutUserId" type="text" placeholder="User ID">
+            <input id="timeoutModeratorId" type="text" placeholder="Moderator ID (optional)">
+            <input id="timeoutMinutes" type="number" placeholder="Minuten">
+            <input id="timeoutReason" type="text" placeholder="Grund (optional)">
+            <button id="timeoutBtn" class="primary">Timeout</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-head">
+            <h2>Kick / Ban</h2>
+          </div>
+          <div class="form-grid">
+            <input id="kickUserId" type="text" placeholder="User ID">
+            <input id="kickModeratorId" type="text" placeholder="Moderator ID (optional)">
+            <input id="kickReason" type="text" placeholder="Grund (optional)">
+            <button id="kickBtn">Kick</button>
+            <input id="banUserId" type="text" placeholder="User ID">
+            <input id="banModeratorId" type="text" placeholder="Moderator ID (optional)">
+            <input id="banDays" type="number" placeholder="Delete Days (0-7)">
+            <input id="banReason" type="text" placeholder="Grund (optional)">
+            <button id="banBtn" class="primary">Ban</button>
+          </div>
+        </div>
+      </div>
+      <div class="grid">
+        <div class="card">
+          <div class="card-head">
+            <h2>Purge</h2>
+          </div>
+          <div class="form-grid">
+            <input id="purgeChannelId" type="text" placeholder="Channel ID">
+            <input id="purgeModeratorId" type="text" placeholder="Moderator ID (optional)">
+            <input id="purgeAmount" type="number" placeholder="Anzahl (1-100)">
+            <input id="purgeUserId" type="text" placeholder="User ID (optional)">
+            <button id="purgeBtn" class="primary">Purge</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="tab-roles" class="panel">
+      <div class="grid">
+        <div class="card">
+          <div class="card-head">
+            <h2>Rolle hinzufügen</h2>
+          </div>
+          <div class="form-grid">
+            <input id="roleAddUserId" type="text" placeholder="User ID">
+            <input id="roleAddRoleId" type="text" placeholder="Role ID">
+            <button id="roleAddBtn" class="primary">Hinzufügen</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-head">
+            <h2>Rolle entfernen</h2>
+          </div>
+          <div class="form-grid">
+            <input id="roleRemoveUserId" type="text" placeholder="User ID">
+            <input id="roleRemoveRoleId" type="text" placeholder="Role ID">
+            <button id="roleRemoveBtn">Entfernen</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="tab-users" class="panel">
+      <div class="grid">
+        <div class="card">
+          <div class="card-head">
+            <h2>User Suche</h2>
+          </div>
+          <div class="form-grid">
+            <input id="userSearchInput" type="text" placeholder="User ID oder Name">
+            <button id="userSearchBtn" class="primary">Suchen</button>
+          </div>
+          <div id="userSearchResults" class="list"></div>
+        </div>
+        <div class="card">
+          <div class="card-head">
+            <h2>Live User</h2>
+            <button id="userLiveReload">Aktualisieren</button>
+          </div>
+          <div id="userLive" class="list"></div>
+        </div>
+      </div>
+    </section>
+
+    <section id="tab-logs" class="panel">
+      <div class="grid">
+        <div class="card">
+          <div class="card-head">
+            <h2>Logs</h2>
+            <div class="tools">
+              <button id="logsReload">Aktualisieren</button>
+              <button id="logsLive">Live verbinden</button>
+            </div>
+          </div>
+          <div id="logs" class="list"></div>
+        </div>
+        <div class="card">
+          <div class="card-head">
+            <h2>Live Status</h2>
+          </div>
+          <div class="list-item" id="logsLiveStatus">Nicht verbunden</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="tab-applications" class="panel">
+      <div class="grid">
+        <div class="card">
+          <div class="card-head">
+            <h2>Bewerbungen (Konfiguration)</h2>
+            <div class="tools">
+              <button id="appsReload">Laden</button>
+              <button id="appsApply" class="primary">Anwenden</button>
+            </div>
+          </div>
+          <p class="muted">Hier kannst du Fragen und Ziele konfigurieren (JSON).</p>
+          <textarea id="applications"></textarea>
+        </div>
+        <div class="card">
+          <div class="card-head">
+            <h2>Neueste Bewerbungen</h2>
+            <button id="appsListReload">Aktualisieren</button>
+          </div>
+          <div id="applicationsList" class="list"></div>
+        </div>
+      </div>
+    </section>
+
+    <section id="tab-settings" class="panel">
+      <div class="card">
+        <div class="card-head">
+          <h2>Settings (Overrides)</h2>
+          <div class="tools">
+            <button id="prettify">Formatieren</button>
+            <button id="reload">Laden</button>
+            <button class="primary" id="apply">Anwenden</button>
+          </div>
+        </div>
         <p class="muted">Diese Werte überschreiben config.yml und wirken ohne Bot-Neustart.</p>
         <textarea id="settings"></textarea>
-        <div class="row">
-          <button id="reload">Laden</button>
-          <button class="primary" id="apply">Anwenden</button>
-        </div>
-      </section>
-
-      <section class="card">
-        <h2>Tickets</h2>
-        <div class="row">
-          <button id="ticketsReload">Aktualisieren</button>
-        </div>
-        <div id="tickets" class="tickets"></div>
-      </section>
-    </div>
+      </div>
+    </section>
   </div>
 
+  <div id="toast" class="toast"></div>
   <script src="/static/app.js"></script>
 </body>
 </html>
